--- a/src/styles/shops.scss
+++ b/src/styles/shops.scss
@@ -64,10 +64,12 @@
 
     &__city-srch {
       width: 100%;
+      max-width: 400px;
     }
 
     &__adress-srch {
       width: 100%;
+      max-width: 400px;
     }
 
     &__search-btn {
