--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -56,7 +56,7 @@
 
   &__numbers {
     position: absolute;
-    right: -330px;
+    right: -22.9vw;
     top: 210px;
     z-index: 1;
     width: 190px;
@@ -99,10 +99,6 @@
       
       font-size: 16px;
       line-height: 24px;
-    }
-
-    &__learn-btn {
-      // margin-left: calc(40%);
     }
 
     &__numbers {
